Adding runTest Api and also java_opts and maven_opts (#91)
Adding runTest Api and adding envVar as a param to spawn API